[gd_scene load_steps=4 format=3 uid="uid://b0sqtfjlhilsc"]

[ext_resource type="Script" path="res://scenes/menus/game/pause_menu.gd" id="1_7l8a2"]
[ext_resource type="Shader" path="res://scenes/menus/game/pause_menu.gdshader" id="2_3sxnt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oalew"]
shader = ExtResource("2_3sxnt")
shader_parameter/amount = 3.0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7l8a2")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_oalew")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(28.8339, 19.6147)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.46
offset_top = -68.0
offset_right = 90.46
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SaveGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="LoadGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="ToMainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "To Main Menu
"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ToMainMenu" to="." method="_on_to_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
